股票：BOLL线（布林线）介绍

--- a/doc/投资理财/股票入门.md
+++ b/doc/投资理财/股票入门.md
@@ -253,6 +253,14 @@
 
 ### 布林线BOLL
 
+#### 组成结构
+
+布林线由上轨线、中轨线、下轨线、K线组合而成。
+
+![image](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.5q4nnyltpn40.webp)
+
+**正常情况下：K线在上轨线和下轨线之间运动。极端情况下K线会突破上轨线或者跌破下轨线，由于在轨道吸引力的作用下，K线会重新回到轨线之间运动。**
+
 ### 成交量VOL
 
 ### 指标王MACD
