股票：BOLL线三种形态

--- a/doc/投资理财/股票入门.md
+++ b/doc/投资理财/股票入门.md
@@ -261,6 +261,24 @@
 
 **正常情况下：K线在上轨线和下轨线之间运动。极端情况下K线会突破上轨线或者跌破下轨线，由于在轨道吸引力的作用下，K线会重新回到轨线之间运动。**
 
+#### BOLL线三种形态
+
+![image-20220109182711988](C:\Users\lucas.zhao\AppData\Roaming\Typora\typora-user-images\image-20220109182711988.png)
+
+1. 开口型
+
+   股票走势可能是上涨或者下跌趋势（具体走势由中轨线决定）
+
+2. 收口型
+
+   盘变（上涨趋势转变为下跌趋势、下跌趋势转变为上涨趋势）
+
+3. 紧口型
+
+   股票横盘震荡
+
+可以通过布林线上下轨道的距离判断股票震荡的幅度，上下轨道的距离越大股票震荡幅度越大。
+
 ### 成交量VOL
 
 ### 指标王MACD
