股票：成交量VOL简介

--- a/doc/投资理财/股票入门.md
+++ b/doc/投资理财/股票入门.md
@@ -281,6 +281,28 @@
 
 ### 成交量VOL
 
+#### 八阵图
+
+![image](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.2onfsj4ho8g0.webp)
+
+**八阵图可以理解为股票的一个轮回：主力开始建仓 -->  股价拉升 --> 回调 --> 继续拉升 --> 主力出货 --> 股价下跌 --> 继续下跌**
+
+#### 完美状态
+
+最完美的状态是：放量上涨（量价齐升）、缩量回调
+
+#### 两种极端
+
+![image](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.36xklf84dgs0.webp)
+
+1. 天量天价
+
+   天量天价的原因是：当天大量的成交额造成
+
+2. 地量地价
+
+#### 天量天线
+
 ### 指标王MACD
 
 ### 筹码分布图
