股票：筹码指标意义

--- a/doc/投资理财/股票入门.md
+++ b/doc/投资理财/股票入门.md
@@ -305,11 +305,54 @@
 
 ### 指标王MACD
 
+#### 组成结构
+
+MACD由：快线、慢线、红色柱体、绿色柱体、零轴分界线组成
+
+#### 两种背驰
+
+1. 高度背驰
+2. 面积背驰
+
+#### 特点
+
+1. 反应滞后，稳定性好，适合中长线判断
+2. MACD日线背驰，周线背驰必须重视，很有可能出现大涨或者大跌
+
 ### 筹码分布图
+
+#### 筹码设计原理
+
+统计股票收盘以后所处的价格区域的数量分布情况。（筹码的数量是不变的，变得只是筹码的分布位置）
+
+![image](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.10nmpg9wlpgw.webp)
+
+####  筹码指标意义
+
+<font color="red">筹码的变动反应的就是主力行为</font>
+
+1. 筹码越集中越好，特别是底部筹码越多越好（这种情况说明底部正在建仓）
+2. 当顶部筹码大于底部筹码时，需要注意风险（说明庄家逐渐开始出货）
+3. **主力出货的过程就是筹码由下往上移动的过程**
+4. 当股价大涨时，下方的筹码还是纹丝不动，说明主力还没有走，缩量回调时可以考虑买入
+
+#### 筹码变动类型
+
+定增、高送转基本都适合炒作
+
+1. 定增
+
+   适合中长期操作
+
+2. 高送转
+
+   适合短期操作
+
+
 
 ### 分时走势图
 
-### 画线分析
+### 画线分析 
 
 ### 大盘指数
 
