股票：筹码反应的是价格分布情况

--- a/doc/投资理财/股票入门.md
+++ b/doc/投资理财/股票入门.md
@@ -323,7 +323,7 @@ MACD由：快线、慢线、红色柱体、绿色柱体、零轴分界线组成
 
 #### 筹码设计原理
 
-统计股票收盘以后所处的价格区域的数量分布情况。（筹码的数量是不变的，变得只是筹码的分布位置）
+筹码反应的是价格分布情况。（筹码的数量是不变的，变得只是筹码的分布位置）
 
 ![image](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.10nmpg9wlpgw.webp)
 
@@ -347,8 +347,6 @@ MACD由：快线、慢线、红色柱体、绿色柱体、零轴分界线组成
 2. 高送转
 
    适合短期操作
-
-
 
 ### 分时走势图
 
