--- a/doc/投资理财/股票入门.md
+++ b/doc/投资理财/股票入门.md
@@ -348,7 +348,26 @@ MACD由：快线、慢线、红色柱体、绿色柱体、零轴分界线组成
 
    适合短期操作
 
-### 分时走势图
+### 分时走势图  
+
+**分时走势图对短线操作有参考意义，对中长线操作没有参考意义。**
+
+#### 组成部分
+
+1. 股票实时价格图（黄色线）
+2. 股票实时平均价格图（白色线）
+
+#### 注意事项
+
+1. 短线操作必须拒绝参与心电图式的股票
+
+   分时图出现水平直线是因为没有成交量造成的（没有主力资金操作），短线操作应该拒绝这样的股票
+
+   ![image](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.58jfo8hzmis0.webp)
+
+2. 白色线（股票价格实时走势图）与黄色线（股票平均价格实时走势图）之间的距离超过5%时，白色线会向黄色线靠拢，这种时候需要**注意被套牢**
+
+3. 集合竞价期间（9:15 - 9:25）庄家很容易控制开盘价。
 
 ### 画线分析 
 
