DAOS：target、pool、container、object概念介绍

--- a/doc/分布式存储系统.md
+++ b/doc/分布式存储系统.md
@@ -157,15 +157,29 @@ DAOS服务器将元数据保存到持久内存中，将批量数据保存在NVMe
 
 DAOS存储模型的本质是一个**键值存储接口**，可以实现特定的数据模型。DAOS对象实际上是通过一个灵活的**多级键来处理的记录表**，允许对相关数据的定位进行细粒度控制。**对象被收集到被称为容器的可管理的单元中**。DAOS在容器的所有对象上提供可伸缩的分布式事务，保证数据一致性，并自动回滚到I / O中间件库和应用程序。DAOS事务机制支持具有本地生产者/消费者管道的复杂工作流，在此过程中，并发消费者不会阻止生产者和消费者收到完整的原子更新通知，并看到数据的一致快照。
 
-#### DAOS目标
+#### DAOS目标（target）
 
+目标是存储分配和空间管理的基本单位，它是持久内存的保留和基于块存储的相结合。它是性能和并发性的单元，target的固定容量是以字节为单位的，并在容量满时操作失败。
 
+#### DAOS池（pool）
 
-#### DAOS池
+池时跨不同存储节点的一组目标，通过这些目标，数据和元数据被分配以实现水平可伸缩性扩容和复制，以确保可用性和持久性。
 
-#### DAOS容器
+**每个目标都与唯一一个池相关联**，它通过在池中持久化存储列表来维护成员关系。在任何时候都可以将新的目标添加到池映射中，而失败的目标可以被排除。
 
-#### DAOS对象
+当失败的目标被排除在池之外时，池中的数据冗余将自动恢复联机，这个过程称为**重建**。在池中的特殊日志定期记录重建进度以解决级联故障；当池中添加新的目标时，数据将自动迁移到新的目标中，以便所有成员平均分配空间使用，这个过程称为**再均衡**，并使用专用日志来支持中断和重新启动。
+
+**只有经过身份验证和授权的应用程序才能够访问池。**
+
+#### DAOS容器（container）
+
+容器表示池中对象的地址空间。
+
+容器是原子性和版本控制的基本单位，每当打开一个容器就会将该容器**句柄**返回给用户。所有对象操作都被调用方显示标记为容器句柄和称为epoch的事物标识。
+
+#### DAOS对象（object）
+
+daos存储模型本质上是一个键数组对象，它为结构化（由索引处理固定大小的数组元素）和非结构化（第一个数组索引中存储的是可变长度数据）对象提供存储。
 
 
 
