--- a/doc/投资理财/股票入门.md
+++ b/doc/投资理财/股票入门.md
@@ -355,7 +355,7 @@ MACD由：快线、慢线、红色柱体、绿色柱体、零轴分界线组成
 #### 组成部分
 
 1. 股票实时价格图（黄色线）
-2. 股票实时平均价格图（白色线）
+   1. 股票实时平均价格图（白色线）
 
 #### 注意事项
 
@@ -370,6 +370,20 @@ MACD由：快线、慢线、红色柱体、绿色柱体、零轴分界线组成
 3. 集合竞价期间（9:15 - 9:25）庄家很容易控制开盘价。
 
 ### 画线分析 
+
+#### 划线原则
+
+两点确定一条直线，第三点确定直线有效性
+
+![image](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.3a6xvrqf2zs0.webp)
+
+#### 线种类
+
+1. 斜线
+2. 水平线
+3. 趋势线
+4. 轨道线
+5. 天量天线
 
 ### 大盘指数
 
