股票入门：大盘指数

--- a/doc/分布式存储系统.md
+++ b/doc/分布式存储系统.md
@@ -163,7 +163,7 @@ DAOS存储模型的本质是一个**键值存储接口**，可以实现特定的
 
 #### DAOS池（pool）
 
-池时跨不同存储节点的一组目标，通过这些目标，数据和元数据被分配以实现水平可伸缩性扩容和复制，以确保可用性和持久性。
+池是跨不同存储节点的一组目标，通过这些目标，数据和元数据被分配以实现水平可伸缩性扩容和复制，以确保可用性和持久性。
 
 **每个目标都与唯一一个池相关联**，它通过在池中持久化存储列表来维护成员关系。在任何时候都可以将新的目标添加到池映射中，而失败的目标可以被排除。
 
