--- a/doc/投资理财/股票入门.md
+++ b/doc/投资理财/股票入门.md
@@ -355,7 +355,7 @@ MACD由：快线、慢线、红色柱体、绿色柱体、零轴分界线组成
 #### 组成部分
 
 1. 股票实时价格图（黄色线）
-   1. 股票实时平均价格图（白色线）
+2. 股票实时平均价格图（白色线）
 
 #### 注意事项
 
@@ -387,4 +387,23 @@ MACD由：快线、慢线、红色柱体、绿色柱体、零轴分界线组成
 
 ### 大盘指数
 
+#### 大盘指数
+
+1. 上证指数
+
+   大盘股
+
+2. 创业板指数
+
+   中小盘指数
+
+3. 沪深300
+
+   成分股票（中坚力量平均数）
+
+4. 上证50
+
+   价值型投资
+
 ### 涨停分析
+
