股票入门：涨停分析

--- a/doc/投资理财/股票入门.md
+++ b/doc/投资理财/股票入门.md
@@ -407,3 +407,9 @@ MACD由：快线、慢线、红色柱体、绿色柱体、零轴分界线组成
 
 ### 涨停分析
 
+当一个行业出现集体上涨的时候，就要重点关注这个板块了。
+
+![image](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.75jok4hg1ww0.webp)
+
+
+
