并发编程：大厂中断面试题

--- a/doc/Java并发编程/并发编程_尚硅谷.md
+++ b/doc/Java并发编程/并发编程_尚硅谷.md
@@ -435,6 +435,43 @@ Found 1 deadlock.
 ### 自旋锁SpinLock
 ### 无锁->独占锁->读写锁 ->邮戳锁
 ### 无锁->偏向锁->轻量级锁->重量级锁
-### LockSupport与线程中断
+## LockSupport与线程中断
+
+### 线程中断机制❗❗
+
+#### 蚂蚁金服面试题
+
+1. 如何中断一个线程
+2. 如何停止一个线程
+3. `interrupt()`  `interrupted()` ` isInterrupted()`三个方法的区别
+
+#### 什么是中断机制
+
+中断只是一种协商机制，Java没有给中断实现任何的方法，具体的中断过程需要开发者自己实现。如果需要中断一个线程，需要手动调用该线程的interrupt方法，<font color="red">interrupt方法仅仅是将线程的中断标志位设置为true，</font>并没有实际中断这个线程，开发者需要自己写代码不断地检测中断标志位，如果为true表示有线程请求当前线程中断，剩下的中断逻辑需要自己去实现。
+
+#### 中断相关API说明
+
+#### 大厂中断面试题
+
+1. 如何中断正在运行中的线程
+   1. 通过一个volatile变量实现
+   2. 通过AtomicBoolean变量实现
+   3. 通过Thread类自带的中断api实例方法实现
+2. 当前线程的中断标志位为true，是不是线程就立刻停止了？
+3. 静态方法`Thread.interrupted()`，谈谈你的理解
+
+#### 总结
+
+### LockSupport是什么？
+
+### 线程等待唤醒机制❗❗
+
 ## Java内存模型之JMM
 
+
+
+
+
+<font color="red"></font>
+
+#### 
