并发编程：通过volatile实现线程中断控制

--- a/doc/Java并发编程/并发编程_尚硅谷.md
+++ b/doc/Java并发编程/并发编程_尚硅谷.md
@@ -455,9 +455,39 @@ Found 1 deadlock.
 
 1. 如何中断正在运行中的线程
    1. 通过一个volatile变量实现
+   
+      ```java
+      public class InterruptDemo {
+          /**
+           * 线程中断状态
+           */
+          private static volatile boolean isStop = false;
+          public static void main(String[] args) throws InterruptedException {
+              new Thread(() ->{
+                  while (true) {
+                      if(isStop) {
+                          System.out.println(Thread.currentThread().getName() + " isStop 被修改为true，线程终止");
+                          break;
+                      }
+                      System.out.println(Thread.currentThread().getName() + " hello volatile");
+                  }
+              }, "thread1").start();
+      
+              TimeUnit.SECONDS.sleep(1);
+      
+              new Thread(() -> {
+                  isStop = true;
+                  System.out.println(Thread.currentThread().getName() + " 将线程1中断状态修改为true");
+              }, "thread2").start();
+          }
+      }
+   
    2. 通过AtomicBoolean变量实现
+   
    3. 通过Thread类自带的中断api实例方法实现
+   
 2. 当前线程的中断标志位为true，是不是线程就立刻停止了？
+
 3. 静态方法`Thread.interrupted()`，谈谈你的理解
 
 #### 总结
