并发编程：通过中断API实现线程中断控制

--- a/doc/Java并发编程/并发编程_尚硅谷.md
+++ b/doc/Java并发编程/并发编程_尚硅谷.md
@@ -451,6 +451,13 @@ Found 1 deadlock.
 
 #### 中断相关API说明
 
+ 
+
+| 方法                           | 方法说明                                                     |
+| ------------------------------ | ------------------------------------------------------------ |
+| Public void  interrupt()       | interrupt方法仅仅是线程的中断状态设置为true，发起一个协商而不会立刻停止线程 |
+| public boolean isInterrupted() | 通过检查中断标志位来判断当前线程是否被中断                   |
+
 #### 大厂中断面试题
 
 1. 如何中断正在运行中的线程
@@ -485,6 +492,30 @@ Found 1 deadlock.
    2. 通过AtomicBoolean变量实现
    
    3. 通过Thread类自带的中断api实例方法实现
+   
+      ```java
+      private static void fun2() throws InterruptedException {
+        Thread thread1 = new Thread(() -> {
+          while (true) {
+            if (Thread.currentThread().isInterrupted()) {
+              System.out.println(Thread.currentThread().getName() + " isInterrupt 被修改为true，线程终止");
+              break;
+            }
+            System.out.println(Thread.currentThread().getName() + " hello interrupt");
+          }
+        }, "thread1");
+        thread1.start();
+      
+        TimeUnit.SECONDS.sleep(1);
+      
+        new Thread(() -> {
+          thread1.interrupt();
+          System.out.println(Thread.currentThread().getName() + " 将线程1中断状态修改为true");
+        }, "thread2").start();
+      }
+      ```
+   
+      
    
 2. 当前线程的中断标志位为true，是不是线程就立刻停止了？
 
