--- a/doc/Java并发编程/并发编程_尚硅谷.md
+++ b/doc/Java并发编程/并发编程_尚硅谷.md
@@ -451,8 +451,6 @@ Found 1 deadlock.
 
 #### 中断相关API说明
 
- 
-
 | 方法                           | 方法说明                                                     |
 | ------------------------------ | ------------------------------------------------------------ |
 | Public void  interrupt()       | interrupt方法仅仅是线程的中断状态设置为true，发起一个协商而不会立刻停止线程 |
@@ -462,7 +460,7 @@ Found 1 deadlock.
 
 1. 如何中断正在运行中的线程
    1. 通过一个volatile变量实现
-   
+
       ```java
       public class InterruptDemo {
           /**
@@ -488,11 +486,11 @@ Found 1 deadlock.
               }, "thread2").start();
           }
       }
-   
+
    2. 通过AtomicBoolean变量实现
-   
+
    3. 通过Thread类自带的中断api实例方法实现
-   
+
       ```java
       private static void fun2() throws InterruptedException {
         Thread thread1 = new Thread(() -> {
@@ -514,12 +512,20 @@ Found 1 deadlock.
         }, "thread2").start();
       }
       ```
-   
-      
-   
+
 2. 当前线程的中断标志位为true，是不是线程就立刻停止了？
 
+   仅仅是将线程的中断标志位设置为true，不会立刻停止线程。<font color="red">并且中断不活动的线程不会产生任何影响。</font>
+
+   如果线程处于被阻塞状态（sleep、wait、join状态），当别的线程调用该线程的interrupt方法时，那么该线程立刻退出阻塞状态，<font color="red">并且该线程的中断标志位被清空（需要在catch代码块中再次调用interrupt方法才能重新设置中断标志位），程序继续运行，</font>并且抛出一个InterruptException异常。
+
 3. 静态方法`Thread.interrupted()`，谈谈你的理解
+
+   1. 返回当前线程的中断状态
+   2. 将当前线程的中断状态清零，并且重新设置为false
+
+
+​		  <font color="red">连续两次调用该方法返回的结果有可能不一样。</font>
 
 #### 总结
 
@@ -534,5 +540,3 @@ Found 1 deadlock.
 
 
 <font color="red"></font>
-
-#### 
