--- a/doc/Java并发编程/并发编程_尚硅谷.md
+++ b/doc/Java并发编程/并发编程_尚硅谷.md
@@ -531,7 +531,23 @@ Found 1 deadlock.
 
 ### LockSupport是什么？
 
+LockSupport的park和unpark方法作用分别是阻塞线程和取消阻塞线程
+
 ### 线程等待唤醒机制❗❗
+
+#### 三种让线程等待和唤醒状态的方法
+
+1. Object类的wait和notify方法实现等待唤醒机制
+2. Condition接口的await和singal方式实现等待唤醒机制
+3. LockSuopport类的park方法可以阻塞当前线程、unpark方法可以唤醒指定被阻塞的线程
+
+#### Object类的wait和notify方法实现等待唤醒机制
+
+#### Condition接口的await和single方式实现等待唤醒机制
+
+#### 上述两个Object和Condition对象的使用限制
+
+#### LockSuopport类的park和unpark实现等待唤醒机制
 
 ## Java内存模型之JMM
 
@@ -539,4 +555,4 @@ Found 1 deadlock.
 
 
 
-<font color="red"></font>
+#### <font color="red"></font>
