并发编程：LockSupport代码实例、使用注意事项

--- a/doc/Java并发编程/并发编程_尚硅谷.md
+++ b/doc/Java并发编程/并发编程_尚硅谷.md
@@ -531,7 +531,7 @@ Found 1 deadlock.
 
 ### LockSupport是什么？
 
-LockSupport的park和unpark方法作用分别是阻塞线程和取消阻塞线程
+LockSupport是一个线程阻塞工具类，`park`方法可以阻塞线程，`unpark`方法可以解除阻塞的线程。解除阻塞的线程需要消耗凭证（permit）这个凭证最多只有一个。
 
 ### 线程等待唤醒机制❗❗
 
@@ -620,6 +620,43 @@ private static void fun2() throws InterruptedException {
 #### 上述两个Object和Condition对象的使用限制
 
 #### LockSuopport类的park和unpark实现等待唤醒机制
+
+LockSupport是一个线程阻塞工具类，`park`方法可以阻塞线程，`unpark`方法可以解除阻塞的线程。
+
+```java
+private static void fun3() throws InterruptedException {
+  Thread thread1 = new Thread(() -> {
+    System.out.println(Thread.currentThread().getName() + " come in");
+    LockSupport.park();
+    System.out.println(Thread.currentThread().getName() + " 被唤醒");
+  }, "thread1");
+  thread1.start();
+
+  TimeUnit.SECONDS.sleep(3);
+
+  new Thread(() -> {
+    LockSupport.unpark(thread1);
+    System.out.println(Thread.currentThread().getName() + " 发出通知");
+  }, "thread2").start();
+}
+```
+
+##### LockSupport使用注意事项
+
+1. <font color="red">线程不需要持有锁就可以直接调用park、unpark方法</font>
+2. <font color="red">可以先调用unpark方法唤醒线程，再调用park方法阻塞线程，被阻塞的线程最终还是可以被唤醒。</font> 
+3. 当调用park方法时，如果有凭证则会直接消耗掉这个凭证，线程退出阻塞状态；如果没有凭证则线程处于阻塞状态
+4. 当调用unpark时，<font color="red">它会增加一个凭证，但是凭证只能有一个累加无效。</font>
+
+##### LockSupport面试题
+
+1. 为什么LockSupport可以突破wait/notify原有的调用顺序？
+
+   因为通过unpark方法可以获取一个凭证，之后再调用park方法可以消费这个凭证，程序不会阻塞
+
+2. 为什么阻塞两次之后再唤醒两次，最终线程还是处于阻塞状态？
+
+   因为重复调用unpark方法只会生产一个凭证，调用两次park方法需要消费两个凭证，因此线程还是处于阻塞状态
 
 ## Java内存模型之JMM
 
