并发编程：JMM的三大特性

--- a/doc/Java并发编程/并发编程_尚硅谷.md
+++ b/doc/Java并发编程/并发编程_尚硅谷.md
@@ -660,11 +660,65 @@ private static void fun3() throws InterruptedException {
 
 ## Java内存模型之JMM
 
+### 大厂面试题
+
+1. 什么是Java内存模型
+
+2. JMM和volatile之间的关系
+
+3. JMM的三大特性
+
+   JMM的关键技术都是围绕着多线程的原子性、可见性、有序性展开的。
+
+4. 为什么要有JMM，它的作用和功能是什么？
+
+   1. 通过JMM可以实现线程和主存之间的抽象关系
+   2. 屏蔽各个硬件平台和操作系统的内存访问差异，以实现让Java程序在各种平台下都能达到一致的内存访问效果。
+
+5. happens-before原则的理解？
+
+### 计算机硬件存储体系
+
+CPU的运行不是直接操作的内存的，而是先把内存的数据加载到缓存中，此时就会出现数据不一致的问题（内存和缓存？）
+
+JMM的作用是屏蔽各种硬件和操作系统内存访问的差异。
+
+### Java Memory Model
+
+### JMM三大特性
+
+1. 可见性
+
+   是指一个线程修改了某一个共享变量，其他线程能否立刻知道共享变量的变更。线程之间共享变量的访问是通过访问主存来实现的，不同线程之间不能直接访问对方的私有工作内存。
+
+   <img src="https://s3.bmp.ovh/imgs/2022/08/17/84db4fc22e541a18.png" style="zoom: 33%;" />
+
+2. 有序性
+
+   为了提高程序性能，编辑器和处理器通常会对指令的执行重新排序，指令的执行顺序和代码的顺序不一致就叫做指令的重排序。
+
+   多线程环境中多个线程交替执行，由于编译器优化重排序的存在，多个线程使用的变量能否保证一致性是无法确定的。
+
+   <font color="red">因此处理器在进行指令重排序的过程中需要考虑数据依赖性，在某些场景中JMM需要禁止指令重排，保证程序的有序性。</font>
+
+3. 原子性
+
+   指的是一个操作是不能被打断的，即使在多线程环境下，一个线程的操作不能被其他线程干扰
+
+### JMM规范下，多线程对变量的读写过程
+
+### happens-before原则
+
+
+
+
+
+
+
+
+
 
 
 
 
 #### <font color="red"></font>
-
-
-
