并发编程：happens-before原则

--- a/doc/Java并发编程/并发编程_尚硅谷.md
+++ b/doc/Java并发编程/并发编程_尚硅谷.md
@@ -707,9 +707,11 @@ JMM的作用是屏蔽各种硬件和操作系统内存访问的差异。
 
 ### JMM规范下，多线程对变量的读写过程
 
+
+
 ### happens-before原则
 
-
+在JMM中，如果一个操作执行的结果需要对另一个操作可见，那么这两个操作之间必须要存在happens-before关系。两个操作之间具有happens-before关系，并不意味着前一个操作必须要在后一个操作之前执行！happens-before仅仅要求前一个操作（执行的结果）对后一个操作可见。
 
 
 
