--- a/doc/Java并发编程/并发编程_尚硅谷.md
+++ b/doc/Java并发编程/并发编程_尚硅谷.md
@@ -713,7 +713,37 @@ JMM的作用是屏蔽各种硬件和操作系统内存访问的差异。
 
 在JMM中，如果一个操作执行的结果需要对另一个操作可见，那么这两个操作之间必须要存在happens-before关系。两个操作之间具有happens-before关系，并不意味着前一个操作必须要在后一个操作之前执行！happens-before仅仅要求前一个操作（执行的结果）对后一个操作可见。
 
+## Volatile与JMM
 
+### Volatile特点
+
+#### 特点
+
+1. 可见性
+
+2. 有序性
+
+   根据程序的实现，volatile可能会禁止指令重排
+
+#### volatile内存语义
+
+当写一个volatile共享变量时，JMM会把该线程对应的本地内存的共享变量的值刷新回主内存；
+
+当读一个volatile共享变量时，JMM会把该线程对应的本地内存的值设置为无效， 重新从共享内存中读取最新的值。
+
+所以volatile的写内存语义时直接刷新到主内存中；读内存语义是直接从主内存中读取。
+
+#### volatile为什么可以保证可见性和有序性？
+
+底层通过内存屏障实现的
+
+### 内存屏障❗❗
+
+### Volatile特性
+
+### 如何正确地使用Volatile
+
+### Volatile使用小结
 
 
 
