并发编程：内存屏障分类

--- a/doc/Java并发编程/并发编程_尚硅谷.md
+++ b/doc/Java并发编程/并发编程_尚硅谷.md
@@ -723,7 +723,7 @@ JMM的作用是屏蔽各种硬件和操作系统内存访问的差异。
 
 2. 有序性
 
-   根据程序的实现，volatile可能会禁止指令重排
+    如果两个指令存在数据依赖关系，volatile会禁止指令重排
 
 #### volatile内存语义
 
@@ -738,6 +738,31 @@ JMM的作用是屏蔽各种硬件和操作系统内存访问的差异。
 底层通过内存屏障实现的
 
 ### 内存屏障❗❗
+
+#### 内存屏障概念
+
+内存屏障，是一类同步屏障指令，是CPU或者编译器对内存随机访问的操作的一部同步点，使得次同步点之前的所有的读写操作执行完之后才能执行同步点之后的操作，<font color="red">目的是为了避免代码重排序。</font>
+
+#### 内存屏障分类
+
+两大类
+
+1. 读屏障
+
+   在读之令之前插入读屏障，让工作内存中的缓存数据失效，重新到主内存中获取最新的数据
+
+2. 写屏障
+
+    在写指令之前插入写屏障，强制把工作内存中的数据刷新到主内存中
+
+四小类
+
+| 屏障类型   | 指令示例                 | 说明                                                         |
+| ---------- | ------------------------ | ------------------------------------------------------------ |
+| LoadLoad   | Load1; LoadLoad;Load2    | 保证Load1读操作在Load2及其后续的读操作之前执行               |
+| StoreStore | Store1;StoreStore;Store2 | 在Store2及其后续的写操作执行之前，保证Store1的写操作已经刷新回主内存 |
+| LoadStore  | Load1; LoadStore;Store2  | 在Store2及其后的写操作执行执行之前，保证load1的读操作已经执行结束 |
+| StoreLoad  | Store1;StoreLoad;Load2   | 保证Store1的写操作已经刷新到主内存之后，Load2的读操作才可以执行 |
 
 ### Volatile特性
 
