并发编程：volatile特性之可以保证可见性，但是不能保证原子性

--- a/doc/Java并发编程/并发编程_尚硅谷.md
+++ b/doc/Java并发编程/并发编程_尚硅谷.md
@@ -766,6 +766,64 @@ JMM的作用是屏蔽各种硬件和操作系统内存访问的差异。
 
 ### Volatile特性
 
+#### 保证可见性
+
+一个线程对共享变量完成写操作之后，结果立即对其他线程可见。
+
+```java
+public class VolatileDemo {
+    static volatile boolean flag = true;
+    public static void main(String[] args) throws InterruptedException {
+        new Thread(() -> {
+            System.out.println(Thread.currentThread().getName() + " come in");
+            while (flag) {
+
+            }
+            System.out.println(Thread.currentThread().getName() + "flag 被设置为:" + flag + " come out");
+        },"thread1").start();
+
+        TimeUnit.SECONDS.sleep(3);
+        flag = false;
+        System.out.println(Thread.currentThread().getName() + "把flag被设置为:" + flag);
+    }
+}
+```
+
+#### 没有原子性
+
+<font color="red">原子性指的是一个操作是不可中断的，即使在多线程环境下，一个操作一旦执行不会受其他线程影响。volatile关键字不能保证原子性。</font>
+
+```java
+class NumberClass {
+    public int number;
+    public synchronized void add() {
+        // 1.加载取值
+        // 2.加1操作
+        // 3.赋值
+        number ++;
+    }
+}
+
+public class VolatileDemo2 {
+    public static void main(String[] args) throws InterruptedException {
+        NumberClass numberClass = new NumberClass();
+        for (int i = 0; i < 100; i++) {
+            new Thread(() -> {
+                for (int j = 0; j < 1000; j++) {
+                     numberClass.add();
+                }
+            }).start();
+        }
+        TimeUnit.SECONDS.sleep(2);
+        System.out.println(numberClass.number);
+    }
+}
+```
+
+`i ++ `（volatile修饰这个变量）操作不具备原子性。该操作分为三个部分：读取旧值、加一操作、赋新值。如果第二个线程在第一个线程读取旧值和赋新值期间读取的变量，那么两个线程读取的是同一个值，最终执行了相同值的加一操作，最终出现了线程安全问题。因此add方法必须使用`synchronied`关键字来保证线程安全。
+
+#### 禁止指令重排
+
 ### 如何正确地使用Volatile
 
 ### Volatile使用小结
