并发编程：volatile的应用场景

--- a/doc/Java并发编程/并发编程_尚硅谷.md
+++ b/doc/Java并发编程/并发编程_尚硅谷.md
@@ -824,7 +824,101 @@ public class VolatileDemo2 {
 
 #### 禁止指令重排
 
+volatile指令底层通过内存屏障可以实现禁止指令重排。
+
 ### 如何正确地使用Volatile
+
+#### 单一赋值可以，但是复合运算赋值不可以（i++）
+
+```java
+// 单一赋值场景
+volatile int a = 10;
+volatile boolean flag = false;
+```
+
+#### 作为状态标志，判断业务是否结束
+
+```java
+/**
+ * 使用：作为状态标志，判断业务是否正常结束
+ * 理由：状态标志不依赖于程序内的其他状态，且通常只有一种状态转换
+ */
+public class VolatileDemo {
+    private static volatile boolean flag = true;
+    public static void main(String[] args) throws InterruptedException {
+        new Thread(() -> {
+            while (flag) {
+                // do something
+            }
+        },"thread1").start();
+
+        TimeUnit.SECONDS.sleep(3);
+
+         new Thread(() -> {
+             flag = false;
+         }, "thread2").start();
+    }
+}
+```
+
+#### 读操作远多于写操作的场景
+
+```java
+public class VolatileCounterDemo {
+     private volatile int value;
+
+     /**
+      * volatile可以保证读操作的可见性
+      * @return
+      */
+     public int getValue (){
+          return value;
+     }
+
+     /**
+      * 利用synchronized可以保证复合操作的原子性
+      * @return
+      */
+     public synchronized int increment() {
+          return value ++;
+     }
+}
+```
+
+#### DCL双端锁实现
+
+初始化对象的操作内部分为三步进行：1.分配内存空间、2.初始化对象、3.将对象指向分配的内存空间
+
+<font color="red">在多线程环境下由于指令重排序，将对象指向分配的内存空间先于初始化对象执行，所以可能返回NULL，通过volatile关键字可以禁止指令重排序。</font>
+
+```java
+public class SafeDoubleCheckSingleton {
+
+    private static volatile SafeDoubleCheckSingleton instance;
+    // 私有化构造参数
+    private SafeDoubleCheckSingleton (){}
+
+    // 双重检查锁设计
+    public SafeDoubleCheckSingleton getInstance() {
+        if (instance == null) {
+            // 多线程创建对象时，通过加锁可以保证只有一个线程创建对象
+            synchronized (SafeDoubleCheckSingleton.class) {
+                if (instance == null) {
+                    //instance = new SafeDoubleCheckSingleton();这行初始化对象代码内部做了三件事情
+                    // 1.分配内存空间
+                    // 2.初始化对象
+                    // 3.
+                    instance = new SafeDoubleCheckSingleton();
+                }
+            }
+        }
+        // 对象创建完毕之后，再次调用getInstance方法可以不需要加锁直接返回对象
+        return instance;
+    }
+}
+```
+
+
 
 ### Volatile使用小结
 
