并发编程：volatile的使用小结

--- a/doc/Java并发编程/并发编程_尚硅谷.md
+++ b/doc/Java并发编程/并发编程_尚硅谷.md
@@ -918,11 +918,16 @@ public class SafeDoubleCheckSingleton {
 }
 ```
 
-
-
 ### Volatile使用小结
 
-
+1. 保证可见性
+2. 没有原子性
+3.  volatile可以禁止指令重排
+4.  内存屏障是什么？
+   1. 读屏障
+   2. 写屏障
+5. 内存屏障的作用
+6. 内存屏障的四大指令
 
 
 
