--- a/doc/Java并发编程/并发编程_尚硅谷.md
+++ b/doc/Java并发编程/并发编程_尚硅谷.md
@@ -929,10 +929,58 @@ public class SafeDoubleCheckSingleton {
 5. 内存屏障的作用
 6. 内存屏障的四大指令
 
+## CAS原理
+
+### 原子类
+
+juc包中的Atomic类都是原子类
+
+### 没有CAS之前
+
+多线程环境下不使用原子类保证i++的线程安全
+
+```java
+public class CASDemo1 {
+    private volatile static int num;
+
+    // volatile可以保证变量的可见性
+    public int getNum() {
+        return num;
+    }
+
+    // synchronized同步方法可以保证i++ 操作的原子性、线程安全（不过同步锁太重量级了）
+    public synchronized void setNum() {
+        num++;
+    }
+}
+```
+
+### 使用CAS之后
+
+多线程环境下使用原子类保证i++的线程安全
+
+```java
+private AtomicInteger atomicInteger = new AtomicInteger();
+
+public int getNum() {
+  return atomicInteger.get();
+}
+
+public void setNum() {
+  atomicInteger.getAndIncrement();
+}
+```
+
+### CAS是什么
+
+### CAS底层原理
+
+### 原子引用
+
+### CAS与自旋锁
+
+### CAS缺点
 
 
 
-
-
-
-#### <font color="red"></font>
+### <font color="red"></font>
