--- a/doc/Java并发编程/并发编程_尚硅谷.md
+++ b/doc/Java并发编程/并发编程_尚硅谷.md
@@ -937,7 +937,7 @@ juc包中的Atomic类都是原子类
 
 ### 没有CAS之前
 
-多线程环境下不使用原子类保证i++的线程安全
+多线程环境下不使用原子类保证i++的线程安全（使用synchronized加锁的方式保证原子操作）
 
 ```java
 public class CASDemo1 {
@@ -957,7 +957,7 @@ public class CASDemo1 {
 
 ### 使用CAS之后
 
-多线程环境下使用原子类保证i++的线程安全
+多线程环境下使用原子类保证i++的线程安全（使用原子类来保证原子操作）
 
 ```java
 private AtomicInteger atomicInteger = new AtomicInteger();
@@ -973,14 +973,65 @@ public void setNum() {
 
 ### CAS是什么
 
+Compare And Set即CAS，中文意思是比较并交换。在CAS操作中有三个值，分别是内存中的值V、旧的预期值A、要修改的新值B。CAS操作过程为：如果内存中的值V和旧的预期值A相等则将内存中的值A修改为新值B，否则循环重试。
+
 ### CAS底层原理
 
 ### 原子引用
 
 ### CAS与自旋锁
 
+CAS是实现自旋锁的基础，CAS底层利用了CPU指令保证了操作的原子性，以达到锁的效果。
+
+自旋锁：是指未获取到锁的线程不会立即阻塞，而是采用循环的方式去尝试获取锁资源，知道获取到锁为止。
+
+自旋锁优缺点：可以减少上下为切换的开销，缺点是循环会消耗CPU资源。
+
+```java
+public class SpinLockDemo {
+    AtomicReference<Thread> atomicReference = new AtomicReference<>();
+
+    public void lock() {
+        Thread currentThread = Thread.currentThread();
+        System.out.println(currentThread.getName() + " come in");
+        // CAS操作不是当前线程则循环等待
+        while (!atomicReference.compareAndSet(null, currentThread)) {
+
+        }
+    }
+
+    public void unLock() {
+        Thread currentThread = Thread.currentThread();
+        atomicReference.compareAndSet(currentThread, null);
+        System.out.println(currentThread.getName() + " take out, unlock");
+    }
+
+    public static void main(String[] args) throws InterruptedException {
+        SpinLockDemo spinLockDemo = new SpinLockDemo();
+        new Thread(() -> {
+            spinLockDemo.lock();
+            try {
+                TimeUnit.SECONDS.sleep(5);
+            } catch (InterruptedException e) {
+                throw new RuntimeException(e);
+            }
+            spinLockDemo.unLock();
+        }, "A").start();
+
+        // 睡眠500毫秒，让B线程晚于A线程启动
+        TimeUnit.MILLISECONDS.sleep(500);
+
+        new Thread(() -> {
+            spinLockDemo.lock();
+            spinLockDemo.unLock();
+        }, "B").start();
+    }
+}
+```
+
 ### CAS缺点
 
-
+1. 循环会占用大量开销
+2.   CAS会发生ABA问题
 
 ### <font color="red"></font>
