并发编程：ABA问题实现

--- a/doc/Java并发编程/并发编程_尚硅谷.md
+++ b/doc/Java并发编程/并发编程_尚硅谷.md
@@ -1032,6 +1032,86 @@ public class SpinLockDemo {
 ### CAS缺点
 
 1. 循环会占用大量开销
-2.   CAS会发生ABA问题
+
+2.  CAS会发生ABA问题
+
+   通过版本号的方式可以解决ABA问题
+
+   ```java
+   public class AtomicStampDemo {
+   
+       public static void main(String[] args) {
+           Book java = new Book(498401, "Java");
+           AtomicStampedReference<Book> stampedReference = new AtomicStampedReference<>(java, 1);
+           System.out.println(stampedReference.getStamp() + "\t " + stampedReference.getReference());
+           Book mySQL = new Book(979129, "MySQL");
+           boolean result = stampedReference.compareAndSet(java, mySQL, stampedReference.getStamp(), stampedReference.getStamp() + 1);
+           System.out.println(stampedReference.getStamp() + "\t " + stampedReference.getReference() + " \t " +result);
+   
+           boolean result1 = stampedReference.compareAndSet(mySQL, java, stampedReference.getStamp(), stampedReference.getStamp() + 1);
+           System.out.println(stampedReference.getStamp() + "\t " + stampedReference.getReference() + " \t " +result);
+   
+       }
+   }
+   ```
+
+   ```log
+   1	 Book{id=498401, name='Java'}
+   2	 Book{id=979129, name='MySQL'} 	 true
+   3	 Book{id=498401, name='Java'} 	 true
+   ```
+
+3. ABA问题实战
+
+   典型的ABA问题
+
+   ```java
+   public class ABADemo {
+       static AtomicInteger atomicInteger = new AtomicInteger(100);
+       public static void main(String[] args) {
+           new Thread(() -> {
+               atomicInteger.compareAndSet(100, 101);
+               try {
+                   // 等待20ms，把CPU资源让给t2
+                   System.out.println("1." + Thread.currentThread().getName() + " 等待20ms，把CPU资源让给t2");
+                   TimeUnit.MILLISECONDS.sleep(20);
+               } catch (InterruptedException e) {
+                   throw new RuntimeException(e);
+               }
+               System.out.println("4." + Thread.currentThread().getName() + " come in");
+               atomicInteger.compareAndSet(101, 100);
+           }, "t1").start();
+   
+           new Thread(() -> {
+               System.out.println("2." + Thread.currentThread().getName() + " come in");
+               try {
+                   // t2线程睡眠200毫秒，让t1线程完成ABA操作
+                   System.out.println("3." + Thread.currentThread().getName() + " t2线程睡眠200毫秒，让t1线程完成ABA操作");
+                   TimeUnit.MILLISECONDS.sleep(200);
+               } catch (InterruptedException e) {
+                   throw new RuntimeException(e);
+               }
+               boolean result = atomicInteger.compareAndSet(100, 2022);
+               System.out.println(result + " value: " + atomicInteger.get());
+           }, "t2").start();
+       }
+   }
+   ```
+
+   ```java
+   2.t2 come in
+   3.t2 t2线程睡眠200毫秒，让t1线程完成ABA操作
+   1.t1 等待20ms，把CPU资源让给t2
+   4.t1 come in
+   true value: 2022
+   ```
+
+   
+
+
+
+
+
+
 
 ### <font color="red"></font>
