并发编程：通过时间戳方式解决ABA问题

--- a/doc/Java并发编程/并发编程_尚硅谷.md
+++ b/doc/Java并发编程/并发编程_尚硅谷.md
@@ -1063,7 +1063,7 @@ public class SpinLockDemo {
 
 3. ABA问题实战
 
-   典型的ABA问题
+   **典型的ABA问题**
 
    ```java
    public class ABADemo {
@@ -1104,6 +1104,52 @@ public class SpinLockDemo {
    1.t1 等待20ms，把CPU资源让给t2
    4.t1 come in
    true value: 2022
+   ```
+
+    **通过时间戳的方式解决ABA问题**
+
+   ```java
+   public class ABADemo {
+       static AtomicInteger atomicInteger = new AtomicInteger(100);
+       static AtomicStampedReference<Integer> atomicStampedReference = new AtomicStampedReference<>(100,1);
+       public static void main(String[] args) {
+           new Thread(() -> {
+               int firstStamp = atomicStampedReference.getStamp();
+               System.out.println(Thread.currentThread().getName() + " 首次版本号：" + firstStamp);
+               try {
+                   // t3线程睡眠50ms，使t4线程运行
+                   TimeUnit.MILLISECONDS.sleep(50);
+               } catch (InterruptedException e) {
+                   throw new RuntimeException(e);
+               }
+               atomicStampedReference.compareAndSet(100, 101, atomicStampedReference.getStamp(), atomicStampedReference.getStamp() + 1);
+               System.out.println(Thread.currentThread().getName() + " 2次版本号：" + atomicStampedReference.getStamp());
+               atomicStampedReference.compareAndSet(101, 100, atomicStampedReference.getStamp(), atomicStampedReference.getStamp() + 1);
+               System.out.println(Thread.currentThread().getName() + " 3次版本号：" + atomicStampedReference.getStamp());
+           }, "t3").start();
+   
+           new Thread(() -> {
+               int firstStamp = atomicStampedReference.getStamp();
+               System.out.println(Thread.currentThread().getName() + " 首次版本号：" + firstStamp);
+               try {
+                   // t4线程睡眠100ms，使t3线程完成ABA操作
+                   TimeUnit.MILLISECONDS.sleep(100);
+               } catch (InterruptedException e) {
+                   throw new RuntimeException(e);
+               }
+               boolean casResult = atomicStampedReference.compareAndSet(100, 2022, firstStamp, firstStamp + 1);
+               System.out.println("t4线程cas结果：" + casResult + "\t" + atomicStampedReference.getReference() + "\t" + atomicStampedReference.getStamp());
+           }, "t4").start();
+       }
+   }
+   ```
+
+   ```java
+   t3 首次版本号：1
+   t4 首次版本号：1
+   t3 2次版本号：2
+   t3 3次版本号：3
+   t4线程cas结果：false	100	3
    ```
 
    
