并发编程：ThreadLocal入门

--- a/doc/Java并发编程/并发编程_尚硅谷.md
+++ b/doc/Java并发编程/并发编程_尚硅谷.md
@@ -1152,11 +1152,33 @@ public class SpinLockDemo {
    t4线程cas结果：false	100	3
    ```
 
-   
+
+## ThreadLocal
+
+### ThreadLocal简介
+
+#### 大厂面试题
+
+1. ThreadLocal中ThreadLocalMap的数据结构是什么？和ThreadLocal的关系？
+2. ThreadLocal的key是弱引用，这是为什么？
+3. ThreadLocal的内存泄漏问题
+4. ThreadLocal中最后为什么要加remove方法？
+
+#### 概念
 
 
 
+#### 应用场景
 
+#### API介绍
+
+#### 实战
+
+### ThreadLocal源码分析
+
+### ThreadLocal内存泄漏问题
+
+### 总结
 
 
 
