并发编程：ThreadLocal使用注意事项

--- a/doc/Java并发编程/并发编程_尚硅谷.md
+++ b/doc/Java并发编程/并发编程_尚硅谷.md
@@ -1166,13 +1166,72 @@ public class SpinLockDemo {
 
 #### 概念
 
+ThreadLocal提供了一个专属于各个线程的、独立的、本地变量副本。
 
+~~ThreadLocal提供线程局部变量，这些变量和正常的变量不同，因为每个线程在访问ThreadLocal实例的时候（通过get、set方法）<font color="red">都有自己的、独立初始化的变量副本。</font>~~
 
 #### 应用场景
+
+ThreadLocal实例通常是类中的<font color="red">私有静态字段</font>，使用他们的目的是希望将状态（用户ID、事务ID）和线程关联起来。<font color="red">ThreadLocal主要解决了让每个线程绑定自己的值，从而避免线层安全问题。</font>
 
 #### API介绍
 
 #### 实战
+
+```java
+public class ThreadLocalDemo {
+    public static void main(String[] args) throws InterruptedException {
+        House house = new House();
+        for (int i = 0; i < 5; i++) {
+            new Thread(() -> {
+                try {
+                    int  size = new Random().nextInt(5) + 1;
+                    System.out.println(Thread.currentThread().getName() + "卖了 " + size);
+                    for (int j = 0; j < size; j++) {
+                        house.sale();
+                        house.saleByThreadLocal();
+                    }
+                } finally {
+                    // 在最后的业务逻辑中remove，否则可能会出现内存泄漏的情况。
+                    house.threadLocal.remove();
+                }
+            }, String.valueOf(i)).start();
+        }
+
+        TimeUnit.SECONDS.sleep(1);
+
+        System.out.println(Thread.currentThread().getName() + " 一共卖了" + house.saleCount);
+    }
+}
+
+class House{
+    public int saleCount;
+    // 初始化ThreadLocal变量
+    public ThreadLocal<Integer> threadLocal = ThreadLocal.withInitial(() -> 0);
+    public synchronized void sale() {
+        saleCount++;
+    }
+
+    /**
+     * 每个线程内部的共享变量副本+1
+     */
+    public void saleByThreadLocal() {
+        threadLocal.set(1 + threadLocal.get());
+    }
+}
+```
+
+##### <font color="red">使用注意事项</font>
+
+1. 使用ThreadLocal需要初始化该变量
+
+2. 必须回收自定义的ThreadLocal变量
+
+   尤其是在线程池场景下，线程会被经常使用，如果不及时清理自定义的ThreadLocal变量，可能会影响后续的业务逻辑、可能过会出现内存泄漏的情况。所以尽量在try finally代码块中回收变量。
+
+##### <font color="red"> 回收自定义ThreadLocal变量实战</font>
+
+以线程池的方式使用ThreadLocal。向线程池的提交的每一个任务都应该在独立线程中运行，线程每执行完一个任务就应该回到最初的初始状态，不应该出现下一个任务的执行结果会受上一个任务的执行结果影响。
 
 ### ThreadLocal源码分析
 
