并发编程：手动回收自定义的ThreadLocal变量

--- a/doc/Java并发编程/并发编程_尚硅谷.md
+++ b/doc/Java并发编程/并发编程_尚硅谷.md
@@ -1231,7 +1231,84 @@ class House{
 
 ##### <font color="red"> 回收自定义ThreadLocal变量实战</font>
 
-以线程池的方式使用ThreadLocal。向线程池的提交的每一个任务都应该在独立线程中运行，线程每执行完一个任务就应该回到最初的初始状态，不应该出现下一个任务的执行结果会受上一个任务的执行结果影响。
+以线程池的方式使用ThreadLocal。向线程池的提交的每一个任务都应该在独立线程中运行，线程每执行完一个任务就应该回到最初的初始状态，不应该出现下一个任务的执行结果会受上一个任务的执行结果影响。因此通过线程池的方式使用ThreadLocal完毕时需要回收自定义的ThreadLocal变量，<font color="red">否则可能会出现影响业务逻辑或者出现内存泄漏的情况。</font>
+
+```java
+public class ThreadLocalDemo2 {
+    public static void main(String[] args) {
+        MyData myData = new MyData();
+        // 创建一个有三个线程的线程池
+        ExecutorService executorService = Executors.newFixedThreadPool(3);
+        try {
+            // 10个请求由3个线程处理
+            for (int i = 0; i < 10; i++) {
+                executorService.submit(() -> {
+                        Integer beforeValue = myData.threadLocal.get();
+                        myData.add();
+                        Integer afterValue = myData.threadLocal.get();
+                        System.out.println(Thread.currentThread().getName() + " before value: " + beforeValue + "\t" + "after value: " + afterValue);
+                });
+            }
+        } finally {
+            // 关闭线程池资源
+            executorService.shutdown();
+        }
+    }
+}
+
+class MyData {
+    public ThreadLocal<Integer> threadLocal = ThreadLocal.withInitial(() -> 0);
+
+    public void add() {
+        threadLocal.set(1 + threadLocal.get());
+    }
+}
+```
+
+*没有手动回收ThreadLocal变量，下一个任务的执行结果会受上一个任务的影响。*
+
+```java
+pool-1-thread-3 before value: 0	after value: 1
+pool-1-thread-1 before value: 0	after value: 1
+pool-1-thread-2 before value: 0	after value: 1
+pool-1-thread-1 before value: 1	after value: 2
+pool-1-thread-1 before value: 2	after value: 3
+pool-1-thread-1 before value: 3	after value: 4
+pool-1-thread-2 before value: 1	after value: 2
+pool-1-thread-2 before value: 2	after value: 3
+pool-1-thread-3 before value: 1	after value: 2
+pool-1-thread-1 before value: 4	after value: 5
+```
+
+------
+
+```java
+executorService.submit(() -> {
+  try {
+    Integer beforeValue = myData.threadLocal.get();
+    myData.add();
+    Integer afterValue = myData.threadLocal.get();
+    System.out.println(Thread.currentThread().getName() + " before value: " + beforeValue + "\t" + "after value: " + afterValue);
+  } finally {
+    myData.threadLocal.remove();
+  }
+});
+```
+
+手动回收了ThreadLocal变量，同一个线程中执行不同任务的结果互相独立，不受影响。
+
+```java
+pool-1-thread-1 before value: 0	after value: 1
+pool-1-thread-2 before value: 0	after value: 1
+pool-1-thread-3 before value: 0	after value: 1
+pool-1-thread-3 before value: 0	after value: 1
+pool-1-thread-2 before value: 0	after value: 1
+pool-1-thread-3 before value: 0	after value: 1
+pool-1-thread-2 before value: 0	after value: 1
+pool-1-thread-3 before value: 0	after value: 1
+pool-1-thread-1 before value: 0	after value: 1
+pool-1-thread-2 before value: 0	after value: 1
+```
 
 ### ThreadLocal源码分析
 
