并发编程：Java对象内存布局

--- a/doc/Java并发编程/并发编程_尚硅谷.md
+++ b/doc/Java并发编程/并发编程_尚硅谷.md
@@ -975,7 +975,7 @@ public void setNum() {
 
 Compare And Set即CAS，中文意思是比较并交换。在CAS操作中有三个值，分别是内存中的值V、旧的预期值A、要修改的新值B。CAS操作过程为：如果内存中的值V和旧的预期值A相等则将内存中的值A修改为新值B，否则循环重试。
 
-### CAS底层原理
+### CAS底层原理😬😬😬😬😬
 
 ### 原子引用
 
@@ -1153,7 +1153,7 @@ public class SpinLockDemo {
    ```
 
 
-## ThreadLocal
+## ThreadLocal😬😬😬😬😬
 
 ### ThreadLocal简介
 
@@ -1174,7 +1174,7 @@ ThreadLocal提供了一个专属于各个线程的、独立的、本地变量副
 
 ThreadLocal实例通常是类中的<font color="red">私有静态字段</font>，使用他们的目的是希望将状态（用户ID、事务ID）和线程关联起来。<font color="red">ThreadLocal主要解决了让每个线程绑定自己的值，从而避免线层安全问题。</font>
 
-#### API介绍
+#### ~~API介绍~~
 
 #### 实战
 
@@ -1229,8 +1229,13 @@ class House{
 
    尤其是在线程池场景下，线程会被经常使用，如果不及时清理自定义的ThreadLocal变量，可能会影响后续的业务逻辑、可能过会出现内存泄漏的情况。所以尽量在try finally代码块中回收变量。
 
-##### <font color="red"> 回收自定义ThreadLocal变量实战</font>
+### ThreadLocal源码分析
 
+#### Thread、ThreadLocal、ThreadLocal Map关系
+
+### ThreadLocal可能造成的问题
+
+#### 业务逻辑混乱问题
 以线程池的方式使用ThreadLocal。向线程池的提交的每一个任务都应该在独立线程中运行，线程每执行完一个任务就应该回到最初的初始状态，不应该出现下一个任务的执行结果会受上一个任务的执行结果影响。因此通过线程池的方式使用ThreadLocal完毕时需要回收自定义的ThreadLocal变量，<font color="red">否则可能会出现影响业务逻辑或者出现内存泄漏的情况。</font>
 
 ```java
@@ -1310,11 +1315,45 @@ pool-1-thread-1 before value: 0	after value: 1
 pool-1-thread-2 before value: 0	after value: 1
 ```
 
-### ThreadLocal源码分析
-
-### ThreadLocal内存泄漏问题
+#### 内存泄漏问题
 
 ### 总结
+
+1.  ThreadLocal使用理解
+
+    每个线程都有自己的实例副本，并且只由当前线程自己使用，其他Thead不会访问，所以就不会出现线程安全问题。
+
+## Java对象内存布局与对象头
+
+### 对象内存布局
+
+对象在堆内存的存储布局可以划分为：对象头（Header）、实例数据（Instance Data）、对其填充（Padding）
+
+<img src="https://s3.bmp.ovh/imgs/2022/09/01/fbec8a6b954cebdd.png" style="zoom: 33%;" />
+
+#### 对象头
+
+1. 对象标记（Mark Word）
+
+   默认存储这对象的HashCode、分代年龄、锁标志位等信息
+
+2. 类型指针（Class Pointer）
+
+   虚拟机通过类型指针来确定这个对象是哪个类的实例
+
+#### 实例数据
+
+#### 对齐填充
+
+保证对象大小是8个字节的倍数
+
+
+
+
+
+
+
+
 
 
 
