Kafka3.x：Kafka概述、Kafka快速入门

--- a/doc/Java并发编程/并发编程_尚硅谷.md
+++ b/doc/Java并发编程/并发编程_尚硅谷.md
@@ -1341,13 +1341,15 @@ pool-1-thread-2 before value: 0	after value: 1
 
    虚拟机通过类型指针来确定这个对象是哪个类的实例
 
+对象标记占用8字节、类型指针站用8字节，再不考虑压缩指针的情况下，对象头占16字节。
+
 #### 实例数据
+
+存放类的属性（Field）数据，包括父类的属性信息
 
 #### 对齐填充
 
 保证对象大小是8个字节的倍数
-
-
 
 
 
