--- a/doc/CPP/C++11.md
+++ b/doc/CPP/C++11.md
@@ -1062,14 +1062,22 @@ int main(int argc, char const *argv[]) {
     });
     return 0;
 }
-
 ```
-
-
 
 ### 21.独占智能指针
 
+std::unique_ptr 是一个独占型的智能指针，它不允许其他的智能指针共享其内部的指针，可以通过它的构造函数初始化一个独占智能指针对象，但是不允许通过赋值将一个 unique_ptr 赋值给另一个 unique_ptr。
+
+```cpp
+// 通过构造函数初始化对象
+unique_ptr<int> ptr1(new int(10));
+// error, 不允许将一个unique_ptr赋值给另一个unique_ptr
+unique_ptr<int> ptr2 = ptr1;
+```
+
 ### 22.弱引用智能指针
+
+
 
 ### 数值类型和字符串之间的转换
 
